test/syntax/fail/different_types_in_if.sync
let node f =
  if true then true else 0
